yml_config/rh-php-git-sync-docker-entrypoint-dev.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: php-git-sync-$ENV
  namespace: $NAMESPACE
  labels:
    app: php-git-sync
spec:
  selector:
    matchLabels:
      app: php-git-sync
  template:
    metadata:
      labels:
        app: php-git-sync
    spec:
      containers:
      - name: php
        image: php:7.2-apache
        command:
          - sh
          - -c
          - >
            docker-entrypoint.sh;
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: docker-entrypoint
          mountPath: /usr/local/bin/docker-entrypoint.sh
          subPath: docker-entrypoint.sh
        - name: shared-stage
          mountPath: /var/www/html
        - name: dbconfig
          mountPath: /var/www/html/db/conexao.php
          subPath: conexao.php
      volumes:
      - name: docker-entrypoint
        configMap:
          name: docker-entrypoint
          defaultMode: 0544
      - name: shared-stage
        emptyDir: {}
      - name: shared-data-git
        emptyDir: {}
      - name: dbconfig
        configMap:
          name: db-config
---
apiVersion: v1
kind: Service
metadata:
  name: php-git-sync-svc
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: php-git-sync
