yml_config/rh-ingress-dev.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rh-ingress-dev
  namespace: compasso-rh-dev
spec:
  rules:
  - host: rh-admissao.compasso.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: php-git-sync-svc
          servicePort: 9000
  tls:
  - hosts:
    - '*.compasso.dev'
    secretName: compasso-dev
